<resources>
    <string name="app_name">SaviTransPeru</string>
    <string name="btn_login">Iniciar Sesion</string>
    <string name="btn_registro">Registrarse</string>
    <string name="btn_invitado">Continuar como Invitado</string>
    <string name="title_activity_listade_viajes">ListadeViajes</string>
    <string name="correo">Correo Eléctronico</string>
    <string name="contraseña">Contraseña</string>
    <string name="RegistroNombre">Nombres</string>
    <string name="RegistroApellidos">Apellidos</string>
    <string name="RegistroTelefono">Teléfono</string>
    <string name="RegistroCorreo">Correo Eléctronico</string>
    <string name="btn_registrarme">Registrarme</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_asdasdasd">asdasdasd</string>
</resources>
