<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/fondoo"
        android:scaleType="centerCrop"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="#d8000000"
        android:gravity="center"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/usuario" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_nombre"
            android:hint="@string/RegistroNombre"
            android:inputType="text"
            android:layout_marginBottom="15dp"
            android:textColor="#fff"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_apellidos"
            android:hint="@string/RegistroApellidos"
            android:inputType="text"
            android:layout_marginBottom="15dp"
            android:textColor="#fff"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_telefono"
            android:hint="@string/RegistroTelefono"
            android:inputType="textPhonetic"
            android:layout_marginBottom="15dp"
            android:textColor="#fff"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_correo"
            android:hint="@string/RegistroCorreo"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="15dp"
            android:textColor="#fff"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_contrasena"
            android:hint="@string/contraseña"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"
            android:textColor="#fff"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_contrasenaa"
            android:hint="Repita la Contraseña"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"

            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textColorHint="#ccc"
            android:textColor="#fff"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_redondo_white"
            android:text="@string/btn_registrarme"
            android:textColor="#000"
            android:textSize="16sp"
            android:elevation="5dp"/>


    </LinearLayout>
</RelativeLayout>